[package]
name = "gsof_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "gsof_parser"
path = "src/lib.rs"

[[bin]]
name = "gsof_parser"
path = "src/main.rs"
required-features = ["std"]

[dependencies]
heapless = "0.9.2"
thiserror = { version = "2.0.18", optional = true }
serialport = { version = "4", optional = true }
clap = { version = "4.6.0", optional = true, features = ["derive"] }

[dev-dependencies]
diff = "0.1"

[features]
default = ["std", "serial"]
std = ["dep:thiserror", "dep:clap"]
serial = ["dep:serialport"]
